<resources>
    <string name="app_name">AutoWallpapers</string>
    <string name="action_settings">Settings</string>
    <string name="savemanager_error_reading">Some error has occurred reading wallpaper rules.</string>
    <string name="toast_need_enable_storage_permmision">You need enable the read external storage permission manually in settings</string>
    <string name="toast_permission_denied">Permission denied!</string>
    <string name="toast_error_saving">Some error occurred saving changes.</string>
    <string name="toast_rule_saved">Rule saved</string>
    <string name="toast_error_imagepath">No image path</string>
    <string name="toast_error_image_unselected">No image selected</string>
    <string name="dialog_delete_title">Do you want delete the rule?</string>
    <string name="dialog_delete_accept">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="tv_from">From</string>
    <string name="tv_days">Days</string>
    <string name="tb_monday">M</string>
    <string name="tb_tuesday">T</string>
    <string name="tb_wednesday">W</string>
    <string name="tb_thursday">Th</string>
    <string name="tb_friday">F</string>
    <string name="tb_saturday">S</string>
    <string name="tb_sunday">Su</string>
    <string name="tv_wallpaper">Wallpaper</string>
    <string name="tv_no_rules">Don\'t exists rules</string>
    <string name="dialog_miui_init"><![CDATA[Xiaomi devices with MIUI need manual permissions for the application remain its proper functioning after a reboot. To do that go to Settings -> Installed applications, select the application and enable automatic init]]></string>
    <string name="dialog_miui_init_title">Attention</string>
    <string name="dialog_miui_init_accept">Accept</string>
</resources>
